intranett.theme/trunk/intranett/theme/skins/intranett_theme_styles/main.css
/* ... */
body > header nav li a {
	display: block;
	height: 100%;
    margin: 0;
	padding: .62em 1.25em;    
    color: #333 !important;
    text-decoration: none;
    border-bottom: none;	
	text-transform: uppercase;
    font-size: 1em;
	border-bottom:1px solid #CCCCCC;    
	text-shadow: 0 1px 0 #f7f7f7;
}
body > header nav li a:hover {
	background-color: #eee;
}
body > header nav li.selected a {
	background: #fff;
	border-bottom:1px solid #fff;
	text-shadow: none;	
}

/* @end */



/* @end */

/* @group Breadcrumbs */

#portal-breadcrumbs {
	margin: -1.6em 0 1.6em;
}
.breadCrumb {
	display:block;
	float:left;
	height:21px;
	margin:0 auto;
	overflow:hidden;
	padding:0.62em 0 0;
	width:960px;
}
.breadCrumb ul {
	display:block;
	height:21px;
	margin:0;
	padding:0;
}
.breadCrumb ul li {
	background:url("chevron.gif") 100% 0 no-repeat;
	display:block;
	float:left;
	font-size:0.9167em;
	height:21px;
	line-height:21px;
	margin:0 6px 0 0;
	overflow:hidden;
	padding:0 10px 0 0;
	position:relative;
}
.breadCrumb ul li div.chevronOverlay {
	position:absolute;
	right:0;
	top:0;
	z-index:2;
}
.breadCrumb ul li span {
	display:block;
	overflow:hidden;
}
.breadCrumb ul li a {
	display:block;
	float:left;
	height:21px;
	line-height:21px;
	overflow:hidden;
	position:relative;
}
.breadCrumb ul li.first a {
	background:url("icon_home.gif") 0 0 no-repeat;
	height:16px !important;
	margin-top:2px;
	overflow:hidden;
	padding:0;
	text-indent:-1000em;
	width:16px;
}
.breadCrumb ul li.first a:hover {
	background-position:0 -16px;
}
.breadCrumb ul li.last {
	background:none;
	margin-right:0;
	padding-right:0;
}
.chevronOverlay {
	background:url("chevron_overlay.png") 100% 0 no-repeat;
	display:none;
	height:20px;
	width:13px;
}

/* @end */

/* @group Columns */

#portal-columns {
	padding: 3.3em 0;
    background: #fff;
    border-top: 1px solid #CCCCCC;
    border-bottom: 1px solid #E6E6E6;    
}
#portal-column-content {
	clear: both;
}
/*#portal-column-content,
#portal-column-one,
#portal-column-two {
	padding: 3.3em 0;
}*/
#portal-columns > aside {
	border-radius: none;
	background: transparent;
}
.managePortletsFallback {
	margin: 1.25em 0;
	display: inline-block;
}

/* @group Content */

#content-core {
	margin-bottom: 1.25em;
}
.documentFirstHeading {
	margin: 0;
	padding: 0;
	/*text-transform: uppercase;*/
}
.documentDescription {
	margin: .76em 0 1.4em;
	padding: 0;
    /*line-height: 1.25em;*/	
    font-size: 1.24em;
}
#portal-columns article footer small {
	display: block;
}
.newsImageContainer a {
	
}
.newsImageContainer p.discreet {
	margin: 0;
}

/* @group Listings */

/* @group Folder Listing */

/*body.template-folder_listing #content-core dt {
	margin-top: 1.25em;
}*/

/* @end */



/*.tileItem:nth-child(odd) {
	background: #F7F7F7;
}*/
/*.tileItem .documentByLine {
	margin-top: -2.5em;
}*/

/* @end */

/* @group Document Actions */

#document-actions {
	margin-top: 1em;	
	margin: 1em 0;
	padding: 0;	
	float: left;
}

#document-actions li {
	display: inline;
	list-style: none;
	font-size: 0.63em;	
}
#document-actions li a {	
	background: rgba(21, 49, 65, .5);
	border:medium none;
	float:left;
	margin:0 1em 0 0;
	padding:0.63em;
	text-transform: uppercase;
	
	border-radius: 5px;
	-moz-border-radius-topleft: 5px;
	-webkit-border-top-left-radius: 5px;
	-moz-border-radius-topright: 5px;
	-webkit-border-top-right-radius: 5px;
	-moz-border-radius-bottomleft: 5px;
	-webkit-border-bottom-left-radius: 5px;
	-moz-border-radius-bottomright: 5px;
	-webkit-border-bottom-right-radius: 5px;	
}

/* @end */

/* @group contentViews */

#edit-bar {
	font-size: 0.76em;
}
.contentViews {
	float: left;
	width: 100%;
	background-color: #f7f7f7;
    line-height: normal;
    margin: 0;
    list-style: none;
	border-bottom: 1px solid #CCCCCC;
    border-top: 1px solid #E6E6E6;
}
.contentViews li {
    display: inline;
}
.contentViews li a {
	float: left;
    background-color: transparent;
    height: auto;
    padding: 0 1em;
    line-height: 2em;
    text-decoration: none;
    z-index: 1;
}
.contentViews li a:hover {
	background-color: #e6e6e6;
}
.contentViews .selected a {
	background: #fff;
	font-weight: bold;
}
/*.configlet .contentViews {
    font-size: 90%;
}*/

/* @end */

/* @group contentActions */

.contentActions {
	clear: left;
    text-align: right;
    padding: 0 0 0 1em;
    z-index: 2;
    position:relative;
    height: 1.6em;
}
.contentActions ul,
.contentActions li {
    margin: 0;
    list-style: none;
    list-style-image: none;
    text-align: left;
    line-height: 1.6em;
}
.contentActions li {
    float: right;
    z-index: 4;
}
.contentActions a {
    text-decoration: none;
    padding: 0 0.5em;
    cursor: pointer;
}
.contentActions span.subMenuTitle {
    padding: 0em 0.5em;
    position: relative;
    white-space: nowrap;
    display: inline;
}
.contentActions a span.subMenuTitle {
    padding: 0px;
    display: inline;
}

/* @end */

/* @group Action Menu */

.actionMenu {
    /*  The spec says we can't put this on an element with a float (although
        Opera is the only one that cares) and we need it in order to catch
        the position:absolute bubbling up */

    position: relative;
    margin: 0;
    padding: 0;
}
.actionMenu .actionMenuHeader {
    margin: 0;
    padding: 0;
    font-weight: normal;
}
.actionMenu.activated .actionMenuHeader {
    position: relative;
    z-index: 10;
}
.actionMenu .actionMenuHeader a {
    display: block;
}
.arrowDownAlternative {
    font-size: 0.85em;
}
.actionMenu .actionMenuContent {
    display: none;
    z-index: 5;
    position: absolute;
    top: 1.6em;
    left: 0;
    width: 100%;
    height: auto;
    padding: 0;
    margin: 0;
    background: #f7f7f7;
	border: 1px solid #eee;
}
.actionMenu.activated .actionMenuContent {
    display: block !important;
    
}
/* ... */

